Improve regex in sshd_config

--- a/ansible/roles/security_check/tasks/main.yml
+++ b/ansible/roles/security_check/tasks/main.yml
@@ -45,9 +45,9 @@
   loop: "{{ conf_lines | dict2items }}"
   vars:
     conf_lines:
-      "PermitRootLogin no": "^#?PermitRootLogin" 
-      "PasswordAuthentication no": "^#?PasswordAuthentication" 
-      "PubkeyAuthentication yes": "^#?PubkeyAuthentication" 
+      "PermitRootLogin no": "^\ *#?\ *PermitRootLogin" 
+      "PasswordAuthentication no": "^\ *#?\ *PasswordAuthentication" 
+      "PubkeyAuthentication yes": "^\ *#?\ *PubkeyAuthentication" 
   become: yes
   notify:
     - restart sshd
